@@ -76,7 +76,11 @@ def defineMacBuildTasks =  { architecture ->
      '--java-options', '--add-exports', 
      '--java-options', 'java.desktop/sun.awt=ALL-UNNAMED',
      '--java-options', '--add-exports', 
-     '--java-options', 'java.desktop/sun.swings=ALL-UNNAMED',
+     '--java-options', 'java.desktop/sun.swing=ALL-UNNAMED',
+     '--java-options', '--add-exports', 
+     '--java-options', 'java.desktop/com.apple.laf=ALL-UNNAMED',
+     '--java-options', '--add-opens', 
+     '--java-options', 'java.desktop/javax.swing.text.html=ALL-UNNAMED',
    	 '--input', 'build/macosapp/input',
      '--main-class', 'org.freeplane.launcher.Launcher',
   	 '--main-jar', 'freeplanelauncher.jar',
